<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.MoviesFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_50sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/top_rated"
                    style="@style/titleStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/node_movie"
                    android:layout_marginVertical="@dimen/_10sdp"
                    />

                <include
                    android:visibility="gone"
                    android:id="@+id/top_rated_error"
                    layout="@layout/node_error"
                    />

                <TextView
                    android:text="@string/popular"
                    style="@style/titleStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/node_movie"
                    android:layout_marginVertical="@dimen/_10sdp"
                    />

                <include
                    android:visibility="gone"
                    android:id="@+id/popular_error"
                    layout="@layout/node_error"
                    />

                <TextView
                    android:text="@string/upcoming"
                    style="@style/titleStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/node_movie"
                    android:layout_marginVertical="@dimen/_10sdp"
                    />

                <include
                    android:visibility="gone"
                    android:id="@+id/upcoming_error"
                    layout="@layout/node_error"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>